# openlogi-ai-faq

./: .gitignore  README.md  pyproject.toml
src/openlogi_ai_faq/: crawler.py  qa_app.py
